Fixed div visibility toggle bug

--- a/style2.scss
+++ b/style2.scss
@@ -11,9 +11,17 @@
 #container {
   padding: 20px;
   float: left;
-  width: 50%;
+  // width: 50%;
+  // display: flex;
+  flex-direction: column;
+  align-self: flex-start;
 }
 /* new form section styling */
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+}
 
 .newForm {
   font-family: "Ubuntu", sans-serif;
@@ -146,7 +154,6 @@ span {
   border: 5px solid black;
   border-radius: 5px;
   padding: 1em;
-  width: 100%;
   text-transform: uppercase;
   font-family: "Ubuntu", sans-serif;
   margin-top: 6px;
